# launcher-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  todo.md
src/: main.rs  util.rs
src/cli/: mod.rs
src/gui/: general.rs  macros.rs  mod.rs  style.rs
src/gui/account/: mod.rs
src/gui/game_output/: mod.rs
src/gui/je/: create_shortcut.rs  edit_installation.rs  home.rs  installations.rs  mod.rs  skins.rs
src/gui/settings/: mod.rs
src/gui/threading/: mod.rs
src/launcher/: asset_index.rs  file_handler.rs  launch_cmd_builder.rs  launch_properties.rs  mod.rs  util.rs  version.rs
src/launcher/settings/: profiles.rs
src/launcher_rewrite/: error.rs  extractor.rs  game_version.rs  installer.rs  launch_cmd.rs  mod.rs  mod_loader_version_manifest.rs  path_handler.rs  urls.rs  version_type.rs
src/launcher_rewrite/assets/: internal.rs  mod.rs
src/launcher_rewrite/authentication/: account_data.rs  login.rs  mod.rs
src/launcher_rewrite/fabric/: mod.rs
src/launcher_rewrite/forge/: installer.rs  mod.rs
src/launcher_rewrite/installed_versions/: mod.rs
src/launcher_rewrite/jar_utils/: extractor.rs  mod.rs  obfuscation_map.rs
src/launcher_rewrite/launch_properties/: internal.rs  mod.rs
src/launcher_rewrite/manifest/: internal.rs  mod.rs
src/launcher_rewrite/neo_forge/: installer.rs  mod.rs
src/launcher_rewrite/patch_notes/: internal.rs  mod.rs
src/launcher_rewrite/profiles/: icon.rs  mod.rs
src/launcher_rewrite/quilt/: mod.rs
src/launcher_rewrite/util/: config_file.rs  hash.rs  mod.rs
src/link/: mod.rs
src/threading/: mod.rs
