[package]
name = "launcher-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {  version = "0.12.5", features = ["blocking", "cookies"] }
serde_json = { version = "1.0.120"}
serde = { version = "1.0.204", features = ["derive"] }
sha1 = "0.10.6"
zip = { version = "2.1.5", default-features = false, features = ["aes-crypto", "deflate", "deflate64", "lzma", "time"] }
iced = { version = "0.13.1", features = ["image", "advanced", "svg", "debug", "markdown", "tokio", "multi-window"] }
iced_aw = { version = "0.11.0", features = ["number_input", "drop_down"]}
base64 = "0.22.1"
regex = "1.10.6"
urlencoding = "2.1.3"
reqwest_cookie_store = "0.8.0"
tokio = "1.39.3"
notify = "6.1.1"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
const_format = "0.2.32"
base16 = "0.2.1"
aho-corasick = "1.1.3"
futures-util = "0.3.30"
mdka = "1.2.10"
pulldown-cmark = "0.11.3"
open = "5.3.0"
os-version = "0.2.0"
